# flipper-companion

./: .gitignore  CMakeLists.txt  G431LedBlink.ioc
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
src/: Device.cpp  Device.hpp  DisplayInput.hpp  DisplayInterface.cpp  DisplayInterface.hpp  PeriphWrappers.cpp  PeriphWrappers.hpp  RingBuffer.hpp  SH1106.cpp  SH1106.hpp  SSD1306.cpp  SSD1306.hpp  ST7567_StateMachine.cpp  ST7567_StateMachine.hpp  SharpMemLCD.cpp  SharpMemLCD.hpp  gpio.c  hal.h  main.cpp  main.h  spi.c  spi.h  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  stm32g4xx_it.cpp  stm32g4xx_it.h  syscalls.c  tasks.cpp  tim.c  usart.c
